<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AquasoftHelloWorld</string>
    <string name="hello_world">Aquasoft Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="Hello_nu">Hello NU</string>
    <string name="Hello_Opor">Hello Opor</string>
    <string name="Hello_Tong">Hello Tong</string>
    <string name="Hello_warayut">Hello warayut</string>
    <string name="Hello_aqua">Hello Aqua</string>

</resources>